--- a/package.json
+++ b/package.json
@@ -18,5 +18,10 @@
         "laravel-mix": "^2.0",
         "lodash": "^4.17.4",
         "vue": "^2.5.7"
+    },
+    "dependencies": {
+        "npm": "^6.3.0",
+        "vue-resource": "^1.5.1",
+        "vue-router": "^3.0.1"
     }
 }
